--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Frontend Boilerplate with React and TypeScript</title>
+    <title>Promos App</title>
   </head>
   <body>
     <div id="root"></div>
